--- a/TaskApplication/Views/Home/EditEmployee.cshtml
+++ b/TaskApplication/Views/Home/EditEmployee.cshtml
@@ -63,19 +63,21 @@
 <script>
     // Populate the form fields with employee data
     $(document).ready(function () {
-        var employeeData = @Html.Raw(Json.Serialize(Model));
+        // Get the employee data element
+        var employeeData = $('#employeeData');
 
         // Populate the form fields
-        $('#Payroll_Number').val(employeeData.Payroll_Number);
-        $('#Forenames').val(employeeData.Forenames);
-        $('#Surname').val(employeeData.Surname);
-        $('#Date_of_Birth').val(employeeData.Date_of_Birth);
-        $('#Telephone').val(employeeData.Telephone);
-        $('#Mobile').val(employeeData.Mobile);
-        $('#Address').val(employeeData.Address);
-        $('#Address_2').val(employeeData.Address_2);
-        $('#Postcode').val(employeeData.Postcode);
-        $('#EMail_Home').val(employeeData.EMail_Home);
-        $('#Start_Date').val(employeeData.Start_Date);
+        $('#Payroll_Number').val(employeeData.data('Payroll_Number'));
+        $('#Forenames').val(employeeData.data('Forenames'));
+        $('#Surname').val(employeeData.data('Surname'));
+        $('#Date_of_Birth').val(employeeData.data('Date_of_Birth'));
+        $('#Telephone').val(employeeData.data('Telephone'));
+        $('#Mobile').val(employeeData.data('Mobile'));
+        $('#Address').val(employeeData.data('Address'));
+        $('#Address_2').val(employeeData.data('Address_2'));
+        $('#Postcode').val(employeeData.data('Postcode'));
+        $('#EMail_Home').val(employeeData.data('EMail_Home'));
+        $('#Start_Date').val(employeeData.data('Start_Date'));
     });
 </script>
+
